=== 3.95.0 (2025-08-12)

* Support typecast_query_params and typecast_body_params in typecast_params plugin (jeremyevans)

* Raise Roda::RodaPlugins::Sessions::CookieTooLarge for cookies where total cookie size is over 4K (not just cookie value) (jeremyevans)

* Add response_content_type plugin for more easily setting content-type for responses (jeremyevans)

=== 3.94.0 (2025-07-14)

* Add view_subdir_leading_slash plugin for using view subdirectory unless template name starts with slash (jeremyevans) (#395)

* Optimize render_each and each_part default local selection on Ruby 3+/!Windows (jeremyevans)

* Optimize render_each and each_part template selection when freezing app with :assume_fixed_locals render plugin option (jeremyevans)

=== 3.93.0 (2025-06-12)

* Numerous minor performance improvements, mostly from rubocop-performance (jeremyevans)

* Support invalid_value_message for custom invalid value messages per-type in typecast_params plugin (jeremyevans)

=== 3.92.0 (2025-05-13)

* Add each_part plugin, with a simpler method for using render_each with locals (jeremyevans)

* Support :assume_fixed_locals render option in render_each plugin (jeremyevans)

=== 3.91.0 (2025-04-11)

* Support returns: :buffer method and plugin option in capture_erb plugin (jeremyevans)

* Allow render_each to accept a block and yield renderings, instead of returning a concatenation of the renderings (jeremyevans)

=== 3.90.0 (2025-03-11)

* Set temporary name on Ruby 3.3+ for remaining anonymous modules and classes (jeremyevans)

* Make send_file in sinatra_helpers use a response body that implements to_path (jeremyevans) (#379)

* Escape newlines in common logger lines (jeremyevans)

=== 3.89.0 (2025-02-12)

* Support passing keyword arguments to mailer plugin mail/sendmail class methods (jeremyevans)

* Improve performance when using :assume_fixed_locals render plugin option, when using compiled methods and freezing the app (jeremyevans)
